      symlink attacks.
    - CVE-2020-8831
  * SECURITY UPDATE: Race condition between report creation and ownership
    (LP: #1862933)
    - data/apport: When setting owner of report file use a file-descriptor
      to the report file instead of its path name to ensure that users can
      not cause Apport to change the ownership of other files via a
      symlink attack.
    - CVE-2020-8833
  * backends/packaging-apt-dpkg.py: Utilize a release and architecture specific
    contents mapping.
  * test/test_backend_apt_dpkg.py: Update the test as we are using a contents
    mapping.
  * test/test_report.py: remove unused import of gzip.
  * apport/ui.py: Write an UnreportableReason for snaps and provide information
    on how to contact a snap developer. (LP: #1729491)
  * problem_report.py, bin/apport-unpack: restore some python2 code because the
    Error Tracker retracers need it.
  * backends/packaging-apt-dpkg.py: add in /usr/games and /usr/libexec as paths
    for executables in the contents mapping.
  * apport/ui.py: When saving a report for later processing if the filename
    to save it to ends with .gz then gzip the report file. Thanks to Yuan-Chen
    Cheng for the patch. (LP: #1837174)

2.20.11 (2019-05-16)
--------------------
  * SECURITY UPDATE: Ensure that we propely handle crashes that originate from
    a PID namespace. Thanks to Sander Bos for discovering this issue.
    (CVE-2018-6552, LP: #1746668)
  * backends/packaging-apt-dpkg.py: switch to using python3-launchpadlib to
    communicate with Launchpad thereby gaining retry capabilities and using its
    cache.
  * backends/packaging-apt-dpkg.py: utilize a global mapping of files to
    packages instead of searching a Contents.gz file multiple times,
    additionally write this mapping to disk so subsequent lookups and retraces
    are quicker. (LP: #1370230)
  * apport/ui.py: Handle old reports generated pre-apport with "remember"