@@ -89,6 +89,30 @@ def get_pid_info(pid):
     cwd = os.open('cwd', os.O_RDONLY | os.O_PATH | os.O_DIRECTORY, dir_fd=proc_pid_fd)
 
 
+def get_starttime(contents):
+    '''Extracts the starttime from the contents of a stat file'''
+
+    # 22nd field in a stat file is the time the process started after
+    # system boot in clock ticks.
+    return int(contents.split()[21])
+
+
+def get_process_starttime():
+    '''Get the starttime of the process using proc_pid_fd'''
+
+    with open("stat", opener=proc_pid_opener) as stat_file:
+        contents = stat_file.read()
+    return get_starttime(contents)
+
+
+def get_apport_starttime():
+    '''Get the Apport process starttime'''
+
+    with open("/proc/%s/stat" % os.getpid()) as stat_file:
+        contents = stat_file.read()
+    return get_starttime(contents)
+
+
 def drop_privileges(real_only=False):
     '''Change user and group to real_[ug]id
 
@@ -266,9 +290,11 @@ def is_closing_session(uid):
         error_log('is_closing_session(): no DBUS_SESSION_BUS_ADDRESS in environment')
         return False
 
-    orig_uid = os.geteuid()
-    os.setresuid(-1, os.getuid(), -1)
+    euid = os.geteuid()
+    egid = os.getegid()
     try:
+        os.setegid(os.getgid())
+        os.seteuid(os.getuid())
         gdbus = subprocess.Popen(['/usr/bin/gdbus', 'call', '-e', '-d',
                                   'org.gnome.SessionManager', '-o', '/org/gnome/SessionManager', '-m',
                                   'org.gnome.SessionManager.IsSessionRunning'], stdout=subprocess.PIPE,
@@ -280,7 +306,8 @@ def is_closing_session(uid):
         error_log('gdbus call failed, cannot determine running session: ' + str(e))
         return False
     finally:
-        os.setresuid(-1, orig_uid, -1)
+        os.seteuid(euid)
+        os.setegid(egid)
     error_log('debug: session gdbus call: ' + out.decode('UTF-8'))
     if out.startswith(b'(false,'):
         return True
@@ -551,6 +578,16 @@ try:
 
     get_pid_info(pid)
 
+    # Check if the process was replaced after the crash happened.
+    # Ideally we'd use the time of dump value provided by the kernel,
+    # but this would be a backwards-incompatible change that would
+    # require adding support to apport outside and inside of containers.
+    apport_start = get_apport_starttime()
+    process_start = get_process_starttime()
+    if process_start > apport_start:
+        error_log('process was replaced after Apport started, ignoring')
+        sys.exit(0)
+
     # Partially drop privs to gain proper os.access() checks
     drop_privileges(True)
 
@@ -607,8 +644,8 @@ try:
         # Drop permissions temporarily to make sure that we don't
         # include information in the crash report that the user should
         # not be allowed to access.
-        os.seteuid(os.getuid())
         os.setegid(os.getgid())
+        os.seteuid(os.getuid())
         info.add_proc_info(proc_pid_fd=proc_pid_fd)
     finally:
         os.seteuid(euid)
